# platform.prebuilts.rust

./: Android.bp  OWNERS  TEST_MAPPING
linux-x86/1.72.0/: .crates.toml  .crates2.json  BUILD.bazel  manifest_10752340.xml  manifest_10803849.xml
linux-x86/1.72.0/lib/rustlib/: manifest-clippy-preview  manifest-rust-std-aarch64-linux-android  manifest-rust-std-armv7-linux-androideabi  manifest-rust-std-armv7a-none-eabi  manifest-rust-std-i686-unknown-linux-musl  manifest-rust-std-x86_64-linux-android  manifest-rust-std-x86_64-unknown-linux-gnu  manifest-rustc  manifest-rustfmt-preview
linux-x86/1.72.0/lib/rustlib/aarch64-linux-android/lib/: libadler-0a8258676596bdfc.rlib  libcfg_if-671a5353f3636193.rlib  libgetopts-83b009f06dc5623a.rlib  libmemchr-c954550fd73dbaaf.rlib  libminiz_oxide-8cff100523a6f3c2.rlib  libpanic_abort-926e36c5b976470e.rlib  librustc_demangle-bd18fd53b909d07e.rlib  librustc_std_workspace_alloc-c0440fe336c6982f.rlib  librustc_std_workspace_core-aa1ca4aa1a14f5e6.rlib  libstd_detect-8886a20c638dc9b9.rlib  libunicode_width-be8134707c9590c9.rlib  libunwind-ce6f75e76e42c453.rlib
linux-x86/1.72.0/lib/rustlib/aarch64-unknown-none/lib/: libcompiler_builtins-b726ba1eaee643a1.rlib
linux-x86/1.72.0/lib/rustlib/armv7-linux-androideabi/lib/: libaddr2line-3b1da6d6189973e7.rlib  libcfg_if-99efccf34225ea8a.rlib  libcompiler_builtins-0c128d99e5a13aa1.rlib  libgetopts-185c468f5a8be9bb.rlib  libhashbrown-6ae9c92d195aa6ad.rlib  liblibc-bc7fe53bd78646f1.rlib  libmemchr-525689f7af86edb7.rlib  libpanic_abort-c598ddeb70cfb122.rlib  libprofiler_builtins-8538597894742ee1.rlib  librustc_demangle-9ad9286e0c0e09b9.rlib  librustc_std_workspace_alloc-fb1a82cc3b07aa79.rlib  librustc_std_workspace_core-e3662ed7b8600d5b.rlib  librustc_std_workspace_std-659c5e1db64f01f0.rlib  libstd_detect-d6d0d39656256079.rlib  libsysroot-5c83f18df164ac02.rlib  libunicode_width-8f7564905e62498a.rlib  libunwind-2f5197a21eebb5d7.rlib
linux-x86/1.72.0/lib/rustlib/armv7a-none-eabi/lib/: libcompiler_builtins-3a4d9c89a82a1a08.rlib
linux-x86/1.72.0/lib/rustlib/i686-linux-android/lib/: libadler-401c43e2ce8d421c.rlib  liblibc-5fcd58e910a1da8d.rlib  libminiz_oxide-df24db50cfd3406d.rlib  libpanic_abort-59555045d4b45f67.rlib  libprofiler_builtins-f69d76cb5ceb628e.rlib  librustc_std_workspace_alloc-58ac8187e17764ad.rlib  librustc_std_workspace_core-807ff394123d368f.rlib  libstd_detect-51a4321908acbb62.rlib  libsysroot-e2629987820830dd.rlib  libunwind-1b4c201f327d509f.rlib
linux-x86/1.72.0/lib/rustlib/i686-unknown-linux-gnu/lib/: libadler-eb47b8cc9ebffe6a.rlib  libcfg_if-3dd8481cb1b12fd9.rlib  libcompiler_builtins-3dced143cc429fb0.rlib  libhashbrown-31b197eb625d53c9.rlib  liblibc-e0888045b73d162a.rlib  libmemchr-f002c5e558426b70.rlib  libminiz_oxide-2842aafdca970e6d.rlib  libpanic_abort-071d0855f60a4108.rlib  libpanic_unwind-9802dadce85d5d29.rlib  librustc_demangle-c62d154e5f2b01a8.rlib  librustc_std_workspace_alloc-eb037bbe0251fa49.rlib  librustc_std_workspace_core-b83a1eba2b52c356.rlib  librustc_std_workspace_std-9f0f799b6391886f.rlib  libstd_detect-4ea5de73c061255d.rlib  libsysroot-d9dcc57170a83863.rlib  libunicode_width-1f4ce150e54021ca.rlib  libunwind-d410c8ee8168618f.rlib
linux-x86/1.72.0/lib/rustlib/i686-unknown-linux-musl/lib/: libaddr2line-86ec93559486e7a3.rlib  libcompiler_builtins-9ba8b4fbf28328ff.rlib  libgetopts-3c1c51a34832b4ec.rlib  libhashbrown-3e09928340eea252.rlib  liblibc-2c14ce331fc9f0f7.rlib  libmemchr-f6ac8c50b24eab9d.rlib  libpanic_abort-1b4ce71b9abf490c.rlib  libpanic_unwind-3c7301d0268ce0d0.rlib  libprofiler_builtins-f67b6fc0bd72184d.rlib  librustc_demangle-6782d10ddba526c8.rlib  libstd_detect-b31088a780555bdf.rlib  libsysroot-2e2d0aab2c63b78e.rlib  libunicode_width-a402ac9c8113c34a.rlib  libunwind-79b6d360e20fe7f6.rlib
linux-x86/1.72.0/lib/rustlib/riscv32imc-unknown-none-elf/lib/: librustc_std_workspace_core-d20ab4062040d5c9.rlib
linux-x86/1.72.0/lib/rustlib/x86_64-linux-android/lib/: libaddr2line-fcbde2fbda709af9.rlib  libadler-b1f060f8e3332869.rlib  libcfg_if-bf9912623206982b.rlib  libcompiler_builtins-ef5766b5adf658a9.rlib  libgetopts-109f4709179a43d6.rlib  libhashbrown-8cc262480137f221.rlib  liblibc-db0fab6799622499.rlib  libmemchr-fe7a69944ad87042.rlib  libminiz_oxide-d0752e0bdf4c23d5.rlib  libpanic_abort-f712721728efc72f.rlib  libprofiler_builtins-a6cdbb5d8a405389.rlib  librustc_demangle-f49f1a7e8745438f.rlib  librustc_std_workspace_alloc-a51e737d99b1f6c1.rlib  librustc_std_workspace_core-2a22d0db3493c44e.rlib  librustc_std_workspace_std-9caacc8db83b081d.rlib  libstd_detect-9ff93be95ecba65e.rlib  libsysroot-29f68a8c808f3aa3.rlib  libunwind-11ad77a497f3eb6f.rlib
linux-x86/1.72.0/lib/rustlib/x86_64-pc-windows-gnu/lib/: libaddr2line-8612789d52a1ebe9.rlib  libadler-3dba76736cc26300.rlib  libcfg_if-cf30ebab99d5eb08.rlib  libcompiler_builtins-083889edb374b7b8.rlib  libgetopts-dc7812565b8d911c.rlib  libhashbrown-e4136e0190d403d2.rlib  liblibc-08239750986afa95.rlib  libmemchr-f6f23e96b5c6abae.rlib  libminiz_oxide-e9c2f4f6d6ae02da.rlib  libpanic_abort-720f86bff4598758.rlib  librustc_std_workspace_core-d6e9d68ea40758e1.rlib  librustc_std_workspace_std-02c28aca974f53b9.rlib  libunwind-cb046e7f38d1ee24.rlib
linux-x86/1.72.0/lib/rustlib/x86_64-unknown-linux-gnu/lib/: libaddr2line-c1e713860251745c.rlib  libadler-a262978ac136bc76.rlib  libcfg_if-3e32d1b41484e451.rlib  libhashbrown-ae0e54ed40b3a510.rlib  libmemchr-b321dcd776e9743b.rlib  libminiz_oxide-c2dcb00f9136817c.rlib  libpanic_abort-da0a80eff88be174.rlib  librustc_demangle-dcf68d67ce7b0a8f.rlib  librustc_std_workspace_core-04b73f4c30e9e1dd.rlib  librustc_std_workspace_std-cb9892ea8a4e6563.rlib  libstd_detect-6c53e96a1161e601.rlib  libsysroot-e9df627e4d309bfe.rlib  libunwind-348da6fa16804f0e.rlib
linux-x86/1.72.0/lib/rustlib/x86_64-unknown-linux-musl/lib/: libaddr2line-44a3b7211c86581c.rlib  libadler-a208220d93b9fbd4.rlib  libcfg_if-0bd7306b5809fd99.rlib  libgetopts-19d614f2d52ee60e.rlib  liblibc-da8397ef6fd037e9.rlib  libsysroot-0da7208ec5bd3522.rlib  (+9 more)
linux-x86/1.72.0/libexec/: cargo-credential-1password  rust-analyzer-proc-macro-srv
(+10893 files in other folders)
